js script is functional, some bugs with text displayed

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <h1>The Psychic Game</h1>
 
     <p>Guess what letter I'm thinking of!</p>
-    <p>Wins: </p>
-    <p>Losses: </p>
-    <p>Guesses left: </p>
-    <p>Your guesses so far: </p>
+    <p>Wins:</p>
+    <div id="wins"></div>
+    <p>Losses:</p>
+    <div id="losses"></div>
+    <p>Guesses left:</p>
+    <div id="guesses-left"></div>
+    <p>Guesses so far:</p>
+    <div id="already-guessed"></div>
 
   <script src="assets/javascript/game.js"></script>
 </body>
